--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     
-    <button class="redirigir" onclick="window.location.href='index2.html'">Siguiente</button>
+    <button class="redirigir" onclick="window.location.href='Index2.html'">Siguiente</button>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.1/dist/confetti.browser.min.js"></script>
     <script>
